Replace deprecated URL constructors with URI